--- a/app/src/main/res/layout/add_new_menu_layout.xml
+++ b/app/src/main/res/layout/add_new_menu_layout.xml
@@ -38,31 +38,32 @@
 
             <Button
                 android:id="@+id/btnSelect"
-                android:text="SELECT"
-                android:textColor="@android:color/white"
                 android:layout_width="wrap_content"
-                android:layout_marginRight="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
                 android:layout_alignParentBottom="true"
+                android:layout_margin="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_weight="1"
+                android:background="@color/colorPrimary"
                 android:shadowColor="@android:color/black"
-                android:background="@color/colorPrimary"/>
+                android:text="SELECT IMAGE"
+                android:textColor="@android:color/white" />
 
             <Button
                 android:id="@+id/btnUpload"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_margin="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_weight="1"
+                android:background="@color/colorPrimaryDark"
+                android:shadowColor="@android:color/black"
                 android:text="UPLOAD"
                 android:textColor="@android:color/white"
-                android:layout_width="wrap_content"
-                android:layout_marginRight="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:layout_alignParentBottom="true"
-                android:shadowColor="@android:color/black"
-                android:background="@color/colorPrimaryDark"/>
+                android:visibility="gone" />
 
 
 
