--- a/app/src/main/res/layout/add_new_food_layout.xml
+++ b/app/src/main/res/layout/add_new_food_layout.xml
@@ -64,7 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="15sp"
-            android:inputType="text"
+            android:inputType="number"
             app:met_baseColor="@color/colorPrimary"
             app:met_floatingLabel="highlight"
             app:met_primaryColor="@color/colorPrimary"
@@ -82,17 +82,17 @@
 
             <Button
                 android:id="@+id/btnSelect"
-                android:text="SELECT"
-                android:textColor="@android:color/white"
                 android:layout_width="wrap_content"
-                android:layout_marginRight="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
                 android:layout_alignParentBottom="true"
+                android:layout_margin="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_weight="1"
+                android:background="@color/colorPrimary"
                 android:shadowColor="@android:color/black"
-                android:background="@color/colorPrimary"/>
+                android:text="SELECT IMAGE"
+                android:textColor="@android:color/white" />
 
             <Button
                 android:id="@+id/btnUpload"
@@ -108,17 +108,8 @@
                 android:shadowColor="@android:color/black"
                 android:background="@color/colorPrimaryDark"/>
 
-
-
-
-
         </LinearLayout>
 
-
     </LinearLayout>
-
-
-
-
 
 </RelativeLayout>
